# libreoffice-rest

./: .gitignore  Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build-image.yaml
scripts/: build-api.js
src/: clean-exit.ts  constants.ts  detect_filetype.rs  entry.ts  error.rs  libreoffice.rs  logger.ts  main.rs  server.ts
src/libreofficekit/: bindings.rs  mod.rs  sys.rs  urls.rs
src/openoffice/: libreoffice-service.ts
src/prometheus/: client.ts  fastify-metrics.ts  instructions.md  plugin.ts  types.ts
src/routes/: convert.rs  health.rs  mod.rs  ready.rs
src/utils/: invariant.ts  spawn.ts
