[package]
name = "libreoffice-rest"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
axum = { version = "0.8.4", features = ["multipart", "macros"] }
thiserror = "2.0.12"
tempfile = "3.20.0"
libreofficekit = "0.4.0"
