[package]
name = "libreoffice-rest"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
axum = { version = "0.8.4", features = ["multipart", "macros"] }
thiserror = "2.0.12"
tempfile = "3.20.0"
bitflags = "2"
num_enum = "0.7"
dlopen2 = "0.7.0"
once_cell = "1.19.0"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.2.2"
